refactor: Criação de DTOs, Criação de Mapper, Correção de Controllers e Services