@@ -5,21 +5,23 @@ import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.rachai.api.client.GroqApiClient;
 import com.rachai.api.dto.GroupSuggestionDTO;
-import com.rachai.api.exception.BusinessException;
 import com.rachai.api.model.Expense;
 import com.rachai.api.model.Group;
 import com.rachai.api.model.User;
 import com.rachai.api.repository.ExpenseRepository;
 import com.rachai.api.repository.FriendshipRepository;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.math.BigDecimal;
 import java.util.*;
-import java.util.stream.Collectors;
 
 @Service
 public class AiGroupSuggestionService {
+
+    private static final Logger logger = LoggerFactory.getLogger(AiGroupSuggestionService.class);
 
     @Autowired
     private GroqApiClient groqApiClient;
@@ -33,9 +35,12 @@ public class AiGroupSuggestionService {
     private final ObjectMapper objectMapper = new ObjectMapper();
 
     public GroupSuggestionDTO suggestGroup(User currentUser, List<Group> existingGroups, String context) {
-        List<User> friends = friendshipRepository.findByUser(currentUser).stream().map(f -> f.getFriend()).collect(Collectors.toList());
+        logger.info("Attempting to generate intelligent group suggestions for user ID: {}", currentUser.getId());
+
+        List<User> friends = friendshipRepository.findByUser(currentUser).stream().map(f -> f.getFriend()).toList();
 
         Map<Long, Integer> friendGroupCount = new HashMap<>();
+        Map<Long, BigDecimal> friendExpenseTotal = new HashMap<>();
 
         for (Group g : existingGroups) {
             for (User member : g.getMembers()) {
@@ -45,10 +50,11 @@ public class AiGroupSuggestionService {
             }
         }
 
-        Map<Long, BigDecimal> friendExpenseTotal = new HashMap<>();
-        for (Group g : existingGroups) {
-            List<Expense> expenses = expenseRepository.findByGroupId(g.getId());
-            for (Expense e : expenses) {
+        if (!existingGroups.isEmpty()) {
+            List<Long> groupIds = existingGroups.stream().map(Group::getId).toList();
+            List<Expense> allExpenses = expenseRepository.findByGroupIdIn(groupIds);
+
+            for (Expense e : allExpenses) {
                 Long payerId = e.getPayer().getId();
                 if (!payerId.equals(currentUser.getId())) {
                     friendExpenseTotal.merge(payerId, e.getAmount(), BigDecimal::add);
@@ -57,11 +63,15 @@ public class AiGroupSuggestionService {
         }
 
         String prompt = buildPrompt(currentUser, friends, existingGroups, friendGroupCount, friendExpenseTotal, context);
+        String systemMessage = "Você é um assistente de divisão de despesas. Responda sempre em JSON puro, sem marcações markdown de bloco de código.";
 
-        String systemMessage = "Você é um assistente de divisão de despesas. Responda sempre em JSON puro, sem markdown.";
-        String aiResponse = groqApiClient.chat(systemMessage, prompt);
-
-        return parseAiResponse(aiResponse);
+        try {
+            String aiResponse = groqApiClient.chat(systemMessage, prompt);
+            return parseAiResponse(aiResponse);
+        } catch (Exception e) {
+            logger.warn("GROQ API failed or returned bad JSON. Activating local fallback engine. Reason: {}", e.getMessage());
+            return buildFallbackSuggestion(friends, friendGroupCount, context);
+        }
     }
 
     private String buildPrompt(User user, List<User> friends, List<Group> existingGroups, Map<Long, Integer> friendGroupCount, Map<Long, BigDecimal> friendExpenseTotal, String context) {
@@ -71,7 +81,7 @@ public class AiGroupSuggestionService {
         sb.append("Analise os dados abaixo e sugira um novo grupo de divisão de despesas para o usuário.\n\n");
 
         sb.append("=== USUÁRIO ===\n");
-        sb.append("Nome: ").append(user.getFirstName()).append("\n\n");
+        sb.append("Nome: ").append(user.getName()).append("\n\n"); // Ajustado para getName() igual ao seu Model
 
         if (context != null && !context.isBlank()) {
             sb.append("=== CONTEXTO DO USUÁRIO ===\n");
@@ -82,7 +92,8 @@ public class AiGroupSuggestionService {
         for (User friend : friends) {
             int groupsTogether = friendGroupCount.getOrDefault(friend.getId(), 0);
             BigDecimal totalExpenses = friendExpenseTotal.getOrDefault(friend.getId(), BigDecimal.ZERO);
-            sb.append(String.format("- ID: %d | Nome: %s | Grupos juntos: %d | Total despesas: R$ %.2f\n", friend.getId(), friend.getFirstName(), groupsTogether, totalExpenses));
+            sb.append(String.format("- ID: %d | Nome: %s | Grupos juntos: %d | Total despesas: R$ %.2f\n", 
+                    friend.getId(), friend.getName(), groupsTogether, totalExpenses));
         }
 
         sb.append("\n=== GRUPOS EXISTENTES ===\n");
@@ -102,37 +113,42 @@ public class AiGroupSuggestionService {
         return sb.toString();
     }
 
-    private GroupSuggestionDTO parseAiResponse(String aiText) {
-        try {
-            String cleanJson = aiText.trim().replaceAll("```json", "").replaceAll("```", "").trim();
+    private GroupSuggestionDTO parseAiResponse(String aiText) throws JsonProcessingException {
+        String cleanJson = aiText.trim()
+                .replaceAll("(?s)^.*?\\{", "{")
+                .replaceAll("(?s)\\}.*?$", "}");
 
-            JsonNode node = objectMapper.readTree(cleanJson);
-
-            List<Long> memberIds = new ArrayList<>();
-
-            JsonNode idsNode = node.path("suggestedMemberIds");
-            
-            if (idsNode.isArray()) {
-                for (JsonNode idNode : idsNode) {
-                    memberIds.add(idNode.asLong());
-                }
+        JsonNode node = objectMapper.readTree(cleanJson);
+        List<Long> memberIds = new ArrayList<>();
+        JsonNode idsNode = node.path("suggestedMemberIds");
+        
+        if (idsNode.isArray()) {
+            for (JsonNode idNode : idsNode) {
+                memberIds.add(idNode.asLong());
             }
-
-            return new GroupSuggestionDTO(
-                    node.path("suggestedName").asText("Novo Grupo"),
-                    node.path("suggestedDescription").asText(""),
-                    memberIds,
-                    node.path("reasoning").asText(""));
-
-        } catch (JsonProcessingException e) {
-            throw new BusinessException("Erro ao processar sugestão da IA: " + e.getMessage());
         }
+
+        return new GroupSuggestionDTO(
+                node.path("suggestedName").asText("Novo Grupo"),
+                node.path("suggestedDescription").asText(""),
+                memberIds,
+                node.path("reasoning").asText("")
+        );
     }
 
     private GroupSuggestionDTO buildFallbackSuggestion(List<User> friends, Map<Long, Integer> friendGroupCount, String context) {
-        List<Long> topFriends = friendGroupCount.entrySet().stream().sorted(Map.Entry.<Long, Integer>comparingByValue().reversed()).limit(3).map(Map.Entry::getKey).collect(Collectors.toList());
+        List<Long> topFriends = friendGroupCount.entrySet().stream()
+                .sorted(Map.Entry.<Long, Integer>comparingByValue().reversed())
+                .limit(3)
+                .map(Map.Entry::getKey)
+                .toList();
 
-        String name = (context != null && !context.isBlank()) ? context : "Novo Grupo";
-        return new GroupSuggestionDTO(name,"Grupo sugerido com base no seu histórico de divisões.", topFriends ,"Sugestão baseada nos amigos com quem você mais divide despesas.");
+        String name = (context != null && !context.isBlank()) ? context : "Grupo de Resenha";
+        return new GroupSuggestionDTO(
+                name,
+                "Grupo sugerido com base nas suas interações frequentes.",
+                topFriends,
+                "A IA está indisponível no momento, mas sugerimos este grupo baseado nos amigos com quem você mais compartilha grupos atuais."
+        );
     }
 }
